1
In file included from /Users/yinpsoft/GameScience/Github/learning_project/Source/LearningFoundation/LearningCamera.cpp:1:
In file included from /Users/yinpsoft/GameScience/Github/learning_project/Source/LearningFoundation/LearningCamera.h:3:
In file included from /Users/yinpsoft/GameScience/Github/learning_project/Include/pxshared/include/foundation/PxTransform.h:36:
In file included from /Users/yinpsoft/GameScience/Github/learning_project/Include/pxshared/include/foundation/PxQuat.h:37:
In file included from /Users/yinpsoft/GameScience/Github/learning_project/Include/pxshared/include/foundation/PxVec3.h:37:
In file included from /Users/yinpsoft/GameScience/Github/learning_project/Include/pxshared/include/foundation/PxMath.h:37:
/Users/yinpsoft/GameScience/Github/learning_project/Include/pxshared/include/foundation/PxPreprocessor.h:449:2: error: Exactly one of NDEBUG and _DEBUG needs to be defined!
  449 | #error Exactly one of NDEBUG and _DEBUG needs to be defined!
      |  ^
1 error generated.
make[3]: *** [Source/LearningFoundation/CMakeFiles/learning_foundation.dir/LearningCamera.cpp.o] Error 1
make[2]: *** [Source/LearningFoundation/CMakeFiles/learning_foundation.dir/all] Error 2
make[1]: *** [Source/RecastNaviDemo/CMakeFiles/RecastNaviDemo.dir/rule] Error 2
make: *** [RecastNaviDemo] Error 2
